[metadata]
name = error-explainer
version = 0.1.0
author = Vibhas Bhaskar
author_email = vibhas.bhaskar@gmail.com
description = Turns Python errors into beginner-friendly explanations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/error-explainer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
